kustomiz.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: app
---
apiVersion: v1
kind: Namespace
metadata:
  name: monitoring
---
namespace: app
resources:
  - app.yaml
---
namespace: monitoring
resources:
  - monitoring.yaml
