ingress.yaml
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: ingress
  annotations:
    kubernetes.io/ingress.class: traefik
    traefik.frontend.rule.type: PathPrefixStrip
spec:
  rules:
  - host: prom.minikube
    http:
      paths:
      - path: /prometheus
        pathType: Prefix
        backend:
          serviceName: prometheus.monitoring
          servicePort: http

      - path: /grafana
        pathType: Prefix
        backend:
          serviceName: grafana.monitoring
          servicePort: http

      - path: /app
        pathType: Prefix
        backend:
          serviceName: app.app
          servicePort: http
